# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("harfbuzz_config") {
  include_dirs = [ "src",
    "include",
    "../graphite/src"
  ]
}

config("harfbuzz_flags") {
  cflags = []
  if (is_clang) {
    cflags += [
      "-Wno-missing-field-initializers",
      "-Wno-unused-variable",
      "-Wno-sign-compare",
    ]
  }

  defines = [
    "HAVE_OT",
    "HAVE_ICU",
    "HAVE_ICU_BUILTIN",
    "HB_NO_VISIBILITY",
    "HAVE_GRAPHITE2",
  ]

  if (is_linux || is_android || is_fuchsia) {
    defines += [ "HAVE_PTHREAD" ]
  }
}

source_set("harfbuzz_sources") {
  sources = [
    "../graphite/src/CmapCache.cpp",
    "../graphite/src/Code.cpp",
    "../graphite/src/Collider.cpp",
    "../graphite/src/Decompressor.cpp",
    "../graphite/src/Face.cpp",
    "../graphite/src/FeatureMap.cpp",
    "../graphite/src/FileFace.cpp",
    "../graphite/src/Font.cpp",
    "../graphite/src/GlyphCache.cpp",
    "../graphite/src/GlyphFace.cpp",
    "../graphite/src/Intervals.cpp",
    "../graphite/src/Justifier.cpp",
    "../graphite/src/NameTable.cpp",
    "../graphite/src/Pass.cpp",
    "../graphite/src/Position.cpp",
    "../graphite/src/Segment.cpp",
    "../graphite/src/Silf.cpp",
    "../graphite/src/Slot.cpp",
    "../graphite/src/Sparse.cpp",
    "../graphite/src/TtfUtil.cpp",
    "../graphite/src/UtfCodec.cpp",
    "../graphite/src/direct_machine.cpp",
    "../graphite/src/gr_char_info.cpp",
    "../graphite/src/gr_face.cpp",
    "../graphite/src/gr_features.cpp",
    "../graphite/src/gr_font.cpp",
    "../graphite/src/gr_logging.cpp",
    "../graphite/src/gr_segment.cpp",
    "../graphite/src/gr_slot.cpp",
    "../graphite/src/inc/CharInfo.h",
    "../graphite/src/inc/CmapCache.h",
    "../graphite/src/inc/Code.h",
    "../graphite/src/inc/Collider.h",
    "../graphite/src/inc/Compression.h",
    "../graphite/src/inc/Decompressor.h",
    "../graphite/src/inc/Endian.h",
    "../graphite/src/inc/Error.h",
    "../graphite/src/inc/Face.h",
    "../graphite/src/inc/FeatureMap.h",
    "../graphite/src/inc/FeatureVal.h",
    "../graphite/src/inc/FileFace.h",
    "../graphite/src/inc/Font.h",
    "../graphite/src/inc/GlyphCache.h",
    "../graphite/src/inc/GlyphFace.h",
    "../graphite/src/inc/Intervals.h",
    "../graphite/src/inc/List.h",
    "../graphite/src/inc/Machine.h",
    "../graphite/src/inc/Main.h",
    "../graphite/src/inc/NameTable.h",
    "../graphite/src/inc/Pass.h",
    "../graphite/src/inc/Position.h",
    "../graphite/src/inc/Rule.h",
    "../graphite/src/inc/Segment.h",
    "../graphite/src/inc/Silf.h",
    "../graphite/src/inc/Slot.h",
    "../graphite/src/inc/Sparse.h",
    "../graphite/src/inc/TtfTypes.h",
    "../graphite/src/inc/TtfUtil.h",
    "../graphite/src/inc/UtfCodec.h",
    "../graphite/src/inc/bits.h",
    "../graphite/src/inc/debug.h",
    "../graphite/src/inc/json.h",
    "../graphite/src/inc/locale2lcid.h",
    "../graphite/src/inc/opcode_table.h",
    "../graphite/src/inc/opcodes.h",
    "../graphite/src/json.cpp",
    "../graphite/../graphite/include/graphite2/Font.h",
    "../graphite/include/graphite2/Log.h",
    "../graphite/include/graphite2/Segment.h",
    "../graphite/include/graphite2/Types.h",
    "src/hb-aat-layout.cc",
    "src/hb-aat-map.cc",
    "src/hb-blob.cc",
    "src/hb-buffer-serialize.cc",
    "src/hb-buffer-verify.cc",
    "src/hb-buffer.cc",
    "src/hb-common.cc",
    "src/hb-draw.cc",
    "src/hb-face-builder.cc",
    "src/hb-face.cc",
    "src/hb-fallback-shape.cc",
    "src/hb-font.cc",
    "src/hb-graphite2.cc",
    "src/hb-graphite2.h",
    "src/hb-map.cc",
    "src/hb-number.cc",
    "src/hb-ot-cff1-table.cc",
    "src/hb-ot-cff2-table.cc",
    "src/hb-ot-color.cc",
    "src/hb-ot-face.cc",
    "src/hb-ot-font.cc",
    "src/hb-ot-layout.cc",
    "src/hb-ot-map.cc",
    "src/hb-ot-math.cc",
    "src/hb-ot-meta.cc",
    "src/hb-ot-metrics.cc",
    "src/hb-ot-name.cc",
    "src/hb-ot-shape-fallback.cc",
    "src/hb-ot-shape-normalize.cc",
    "src/hb-ot-shape.cc",
    "src/hb-ot-shaper-arabic.cc",
    "src/hb-ot-shaper-default.cc",
    "src/hb-ot-shaper-hangul.cc",
    "src/hb-ot-shaper-hebrew.cc",
    "src/hb-ot-shaper-indic-table.cc",
    "src/hb-ot-shaper-indic.cc",
    "src/hb-ot-shaper-khmer.cc",
    "src/hb-ot-shaper-myanmar.cc",
    "src/hb-ot-shaper-syllabic.cc",
    "src/hb-ot-shaper-thai.cc",
    "src/hb-ot-shaper-use.cc",
    "src/hb-ot-shaper-vowel-constraints.cc",
    "src/hb-ot-tag.cc",
    "src/hb-ot-var.cc",
    "src/hb-outline.cc",
    "src/hb-paint-extents.cc",
    "src/hb-paint.cc",
    "src/hb-set.cc",
    "src/hb-shape-plan.cc",
    "src/hb-shape.cc",
    "src/hb-shaper.cc",
    "src/hb-static.cc",
    "src/hb-style.cc",
    "src/hb-ucd.cc",
    "src/hb-unicode.cc",
  ]

  configs += [ ":harfbuzz_flags" ]

  public_configs = [ ":harfbuzz_config" ]

  deps = [
    "//third_party/freetype2",
    "//third_party/icu:icuuc",
  ]
}

source_set("harfbuzz_subset") {
  sources = [
    "src/hb-graphite2.cc",
    "src/hb-graphite2.h",
    "src/graph/gsubgpos-context.cc",
    "src/hb-aat-layout.cc",
    "src/hb-aat-map.cc",
    "src/hb-blob.cc",
    "src/hb-buffer-serialize.cc",
    "src/hb-buffer-verify.cc",
    "src/hb-buffer.cc",
    "src/hb-common.cc",
    "src/hb-draw.cc",
    "src/hb-face-builder.cc",
    "src/hb-face.cc",
    "src/hb-fallback-shape.cc",
    "src/hb-font.cc",
    "src/hb-map.cc",
    "src/hb-number.cc",
    "src/hb-ot-cff1-table.cc",
    "src/hb-ot-cff2-table.cc",
    "src/hb-ot-color.cc",
    "src/hb-ot-face.cc",
    "src/hb-ot-font.cc",
    "src/hb-ot-layout.cc",
    "src/hb-ot-map.cc",
    "src/hb-ot-math.cc",
    "src/hb-ot-meta.cc",
    "src/hb-ot-metrics.cc",
    "src/hb-ot-name.cc",
    "src/hb-ot-shape-fallback.cc",
    "src/hb-ot-shape-normalize.cc",
    "src/hb-ot-shape.cc",
    "src/hb-ot-shaper-arabic.cc",
    "src/hb-ot-shaper-default.cc",
    "src/hb-ot-shaper-hangul.cc",
    "src/hb-ot-shaper-hebrew.cc",
    "src/hb-ot-shaper-indic-table.cc",
    "src/hb-ot-shaper-indic.cc",
    "src/hb-ot-shaper-khmer.cc",
    "src/hb-ot-shaper-myanmar.cc",
    "src/hb-ot-shaper-syllabic.cc",
    "src/hb-ot-shaper-thai.cc",
    "src/hb-ot-shaper-use.cc",
    "src/hb-ot-shaper-vowel-constraints.cc",
    "src/hb-ot-tag.cc",
    "src/hb-ot-var.cc",
    "src/hb-outline.cc",
    "src/hb-paint-extents.cc",
    "src/hb-paint.cc",
    "src/hb-set.cc",
    "src/hb-shape-plan.cc",
    "src/hb-shape.cc",
    "src/hb-shaper.cc",
    "src/hb-static.cc",
    "src/hb-style.cc",
    "src/hb-subset-cff-common.cc",
    "src/hb-subset-cff1.cc",
    "src/hb-subset-cff2.cc",
    "src/hb-subset-input.cc",
    "src/hb-subset-instancer-solver.cc",
    "src/hb-subset-instancer-iup.cc",
    "src/hb-subset-plan.cc",
    "src/hb-subset.cc",
    "src/hb-ucd.cc",
    "src/hb-unicode.cc",
    "../graphite/src/CmapCache.cpp",
    "../graphite/src/Code.cpp",
    "../graphite/src/Collider.cpp",
    "../graphite/src/Decompressor.cpp",
    "../graphite/src/Face.cpp",
    "../graphite/src/FeatureMap.cpp",
    "../graphite/src/FileFace.cpp",
    "../graphite/src/Font.cpp",
    "../graphite/src/GlyphCache.cpp",
    "../graphite/src/GlyphFace.cpp",
    "../graphite/src/Intervals.cpp",
    "../graphite/src/Justifier.cpp",
    "../graphite/src/NameTable.cpp",
    "../graphite/src/Pass.cpp",
    "../graphite/src/Position.cpp",
    "../graphite/src/Segment.cpp",
    "../graphite/src/Silf.cpp",
    "../graphite/src/Slot.cpp",
    "../graphite/src/Sparse.cpp",
    "../graphite/src/TtfUtil.cpp",
    "../graphite/src/UtfCodec.cpp",
    "../graphite/src/direct_machine.cpp",
    "../graphite/src/gr_char_info.cpp",
    "../graphite/src/gr_face.cpp",
    "../graphite/src/gr_features.cpp",
    "../graphite/src/gr_font.cpp",
    "../graphite/src/gr_logging.cpp",
    "../graphite/src/gr_segment.cpp",
    "../graphite/src/gr_slot.cpp",
  ]
